R1.3.0-BR-R2:  07-12-2020   Kukhee Kim
               add callback mechanism for raw waveform processing
               add callback register API: void (*cb_func[4]) (void *pBuf, unsigned size,  epicsTimeStamp time, void *usr)

R1.3.0-BR-R1:  06-29-2020   Kukhee Kim
               build with commonATCA R1.2.0 to support epics variable Gen2UpConvYaml

R1.3.0-BR-R0:  04-06-2020   Kukhee Kim
               use 2 second timeout for stream thread (to prepare a graceful shutdown)
               implement a graceful shutdown for debug strams
               implement a graceful shutdown for atcaCommonAsyn polling Threads
 
debug-stream:  03-12-2020   Kukhee Kim
               branched out from R1.3.0 to improve debug stream epics interface

R1.3.0        03-10-2020  Kukhee Kim
              Change data type for stream - Int32Array to Int16Array
              Add SHORT type waveform for the debug stream

R1.2.0        03-03-2020  Kukhee Kim
              Add slow update waveforms for debug stream

R1.1.0        03-02-2020  Kukhee Kim 
              Use a separated thread for each stream

R1.0.0        01-29-2020  Kukhee Kim
              build with yamlLoader R2.1.0, cpsw/framework R4.4.1, commonATCA R1.0.0 and buildroot-2019.08

ATCACommon:   11-08-2019  Kukhee Kim
              Initial release, Separate out from RFCommon