@@ -77,7 +77,7 @@ BOOST_INCLUDE = $(BOOST_TOP)/$(PKG_ARCH)/include
 
 # ATCA COMMON API
 COMMONATCA_PACKAGE_NAME=atca/commonATCA
-COMMONATCA_VERSION=R1.2.0
+COMMONATCA_VERSION=R1.3.0
 COMMONATCA_TOP=$(PACKAGE_SITE_TOP)/$(COMMONATCA_PACKAGE_NAME)/$(COMMONATCA_VERSION)
 COMMONATCA_LIB=$(COMMONATCA_TOP)/$(PKG_ARCH)/lib
 COMMONATCA_INCLUDE=$(COMMONATCA_TOP)/$(PKG_ARCH)/include
