@@ -1,3 +1,7 @@
+R1.3.0-BR-R3:  08-22-2020  Kukhee Kim
+               add GITHASH PV
+               build with commonATCA R1.3.0
+
 R1.3.0-BR-R2:  07-12-2020   Kukhee Kim
                add callback mechanism for raw waveform processing
                add callback register API: void (*cb_func[4]) (void *pBuf, unsigned size,  epicsTimeStamp time, void *usr)
